# 100-days-of-code

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
100_days_of_code/: life_in_weeks.py
docs/: README.md  _config.yml
docs/_layouts/: default.html
docs/assets/css/: style.scss
mysite_lifeinweeks/: README.md  main.py
mysite_lifeinweeks/templates/: index.html
