[tool.poetry]
name = "100-days-of-code"
version = "0.1.0"
description = ""
authors = ["Giedrius Blazys <888236+blazysecon@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "100_days_of_code"}]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
Sphinx = "^4.5.0"
furo = "^2022.4.7"
isort = "^5.10.1"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
myst-parser = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 99
max-complexity = 18

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99
